--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
   },
   "autoload": {
     "files": [
-      "registration.php"
+      "app/code/DrubuNet/Andreani/registration.php"
     ],
     "psr-0": {
       "Andreani": "src"
