--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
   "name": "andreani-publico/magento-2.3",
   "description": "module andreani 2.3",
   "type": "magento-module",
+  "stability": "stable",
   "require": {
     "spipu/html2pdf": "^5.2"
     
