--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
   "name": "andreani-publico/magento-2.3",
   "description": "module andreani 2.3",
-  "type": "magento-module",
-  "stability": "stable",
+  "type": "magento2-module",
+  "minimum-stability": "stable",
   "require": {
     "spipu/html2pdf": "^5.2"
     
