--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,10 @@
   "description": "module andreani 2.3",
   "type": "magento2-module",
   "version": "1.0.0",
+  "license": [
+    "OSL-3.0",
+    "AFL-3.0"
+  ],
   "minimum-stability": "stable",
   "require": {
     "spipu/html2pdf": "^5.2"
