--- a/composer.json
+++ b/composer.json
@@ -3,22 +3,16 @@
   "description": "module andreani 2.3",
   "type": "magento2-module",
   "version": "1.0.0",
-  "license": [
-    "OSL-3.0",
-    "AFL-3.0"
-  ],
-  "minimum-stability": "alpha",
-  "prefer-stable": true,
+  "minimum-stability": "stable",
   "require": {
     "spipu/html2pdf": "^5.2"
-    
   },
   "autoload": {
     "files": [
-      "registration.php"
+      "app/code/DrubuNet/Andreani/registration.php"
     ],
     "psr-4": {
-      "DrubuNet\\Andreani\\": ""
+      "DrubuNet\\Andreani\\": "app/code/DrubuNet/Andreani"
     }
   },
   "authors": [
@@ -28,6 +22,4 @@
       "role": "developer"
     }
   ]
-  
 }
-
