--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
   "description": "module andreani 2.3",
   "type": "magento2-module",
   "version": "1.0.0",
-  "minimum-stability": "RC",
+  "minimum-stability": "stable",
   "require": {
     "spipu/html2pdf": "^5.2"
   },
